fix: multi select fix

--- a/Web/WhitePage.MyWeb.UI/src/scss/style.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/style.scss
@@ -124,6 +124,7 @@
 
 // Custom styles
 @import "core/ng-select";
+@import "core/ng2-multi-select";
 @import "core/scrollbar";
 @import "core/pagination";
 
