--- a/Web/WhitePage.MyWeb.UI/src/scss/style.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/style.scss
@@ -127,5 +127,6 @@
 @import "core/ng2-multi-select";
 @import "core/scrollbar";
 @import "core/pagination";
+@import "core/ng2-datepicker";
 
 @import "custom";
