--- a/Web/WhitePage.MyWeb.UI/src/scss/core/_ng2-multi-select.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/core/_ng2-multi-select.scss
@@ -47,6 +47,7 @@
     ul {
         background-color: rgba(237, 243, 243, 0.95) !important;
         width: 100%;
+        position: static !important;
 
         li {
             &:hover {
@@ -55,7 +56,6 @@
             }
 
             a {
-                display: flex;
 
                 input {
                     width: 17px;
