--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -166,6 +166,12 @@
                                 </div>
 
                                 <div class="form-group">
+                                    <label for="testingDate">Testing Date</label>
+                                    <my-date-picker name="mydate" [options]="myDatePickerOptions" id="testingDate"
+                                                    formControlName="myDate"></my-date-picker>
+                                </div>
+
+                                <div class="form-group">
                                     <button class="btn btn-primary" [disabled]="!casePrimaryForm.valid" (click)="onPrimayUpdate()">Update</button>
                                 </div>
                             </div>
