--- a/Web/WhitePage.MyWeb.UI/src/scss/bootstrap_custom/_buttons.scss
+++ b/Web/WhitePage.MyWeb.UI/src/scss/bootstrap_custom/_buttons.scss
@@ -15,6 +15,7 @@
     color: #fff;
 
     &:hover {
-        transform: scale(1.18);
+        transition: all .2s ease-in-out;
+        transform: scale(1.1);
     }
 }
