--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1811,7 +1811,7 @@
                                     <div class="form-group">
                                         <label for="PeacemakerId">Date *</label>
                                         <my-date-picker name="CounselingDate" [options]="myDatePickerOptions" id="CounselingDate"
-                                                        [formControl]="caseSessionForm.controls['CounselingDate']"></my-date-picker>
+                                                        formControlName="CounselingDate"></my-date-picker>
                                         <div>
                                             <small *ngIf="caseSessionForm.controls['CounselingDate'].hasError('required') && caseSessionForm.controls['CounselingDate'].touched" class="mat-text-warn">Date is required.</small>
                                         </div>
@@ -1840,7 +1840,7 @@
                                     <div class="form-group">
                                         <label for="PeacemakerId">Next Session Date</label>
                                         <my-date-picker name="NextSessionScheduled" [options]="myDatePickerOptions" id="NextSessionScheduled"
-                                                        [formControl]="caseSessionForm.controls['NextSessionScheduled']"></my-date-picker>
+                                                        formControlName="NextSessionScheduled"></my-date-picker>
                                     </div>
 
                                     <div class="form-group">
