--- a/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/pages/pages.signin.html
@@ -5,7 +5,7 @@
             <img src="/assets/img/logo-mychoices.png" alt="My Choices" style="height: 60px" />
         </div>
         <div class="container" style="display:flex; justify-content: center">
-            <button role="button" type="submit" name="login-submit" id="my-signin2" tabindex="4" class="btn btn-login transparent-btn" 
+            <button role="button" type="submit" name="login-submit" id="my-signin2" tabindex="4" class="btn btn-login transparent-btn"
                     value="Log In" (click)="signIn('google')">
                 <div style="display:flex">
                     <div style="margin-top: 9px">Sign in with Google </div>
@@ -14,6 +14,8 @@
                     </div>
                 </div>
             </button>
+            <button role="button" type="submit" tabindex="5"
+                    value="Log In" (click)="tempSignIn()">Temp</button>
             <div class="form-group">
                 <small class="mat-text-warn">{{errorMsg}}</small>
             </div>
