--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -538,7 +538,7 @@
                             <div class="card-block">
                                 <div class="form-group">
                                     <label for="CenterId">Primary Emergency Contact Name</label>
-                                    <input [formControl]="spouseForm.controls['PrimaryEmergencyContactName']" maxlength="6" class="form-control" />
+                                    <input [formControl]="spouseForm.controls['PrimaryEmergencyContactName']" class="form-control" />
                                 </div>
 
                                 <div class="form-group">
@@ -562,7 +562,7 @@
 
                                 <div class="form-group">
                                     <label for="CenterId">Secondary Emergency Contact Name</label>
-                                    <input [formControl]="spouseForm.controls['SecondaryEmergencyContactName']" maxlength="6" class="form-control" />
+                                    <input [formControl]="spouseForm.controls['SecondaryEmergencyContactName']" class="form-control" />
                                 </div>
 
                                 <div class="form-group">
